--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,1 @@
-{
-  "name": "Sovereign Academy",
-  "short_name": "Sovereign",
-  "start_url": "index.html",
-  "display": "standalone",
-  "background_color": "#ECF0F1",
-  "theme_color": "#2C3E50",
-  "icons": [
-    {
-      "src": "logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ]
-}
+{'name': 'Sovereign Academy', 'short_name': 'Sovereign', 'start_url': '/gina-app/index.html', 'display': 'standalone', 'background_color': '#ffffff', 'theme_color': '#2C3E50', 'icons': [{'src': 'icon-192.png', 'sizes': '192x192', 'type': 'image/png'}, {'src': 'icon-512.png', 'sizes': '512x512', 'type': 'image/png'}]}
