--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "id": "com.integritysvc.sovereignacademy",
+  "description": "Sovereign Academy is your mobile legal companion- giving you printable forms, defense guides and tools to fight back against injustice!  Balancing the Scales of Justice with the power of knowledge!  Empowering you in any legal situation!"
 }
