--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,50 @@
 {
+  "id": "com.integritysvc.sovereignacademy",
   "name": "Sovereign Academy",
   "short_name": "Sovereign",
-  "start_url": "/gina-app/index.html",
+  "description": "Sovereign Academy is your mobile companion, giving you printable forms, defense guides, and tools to help you fight back against injustice. Balancing the scales of justice with the power of knowledge.",
+  "start_url": "/index.html",
+  "scope": "/",
   "display": "standalone",
+  "display_override": [
+    "window-controls-overlay",
+    "standalone"
+  ],
+  "theme_color": "#2f2f2f",
   "background_color": "#ffffff",
-  "theme_color": "#2C3E50",
   "orientation": "portrait",
+  "dir": "ltr",
+  "lang": "en",
+  "categories": [
+    "productivity",
+    "utilities",
+    "legal"
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  },
+  "handle_links": {
+    "enabled": true,
+    "origin": "/"
+  },
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "id": "com.integritysvc.sovereignacademy",
-  "description": "Sovereign Academy is your mobile legal companion- giving you printable forms, defense guides and tools to fight back against injustice!  Balancing the Scales of Justice with the power of knowledge!  Empowering you in any legal situation!"
+  "screenshots": [
+    {
+      "src": "/screenshots/mycase-dashboard.png",
+      "type": "image/png",
+      "sizes": "540x960"
+    }
+  ]
 }
